k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objectstore
  namespace: objectstore
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: objectstore.yusrafaheem.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coordinator
                port:
                  number: 80
